--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url('');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'opensans',sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 #menu-h{
     background-color: black;
@@ -16,17 +18,18 @@
 #menu-h ul li{
     display: inline;
 }
-#menu-h ul li a {
+
+#menu-h ul li a{
     color: #fff;
     padding: 20px;
     display: inline-block;
-    text-decoration:none;
+    text-decoration: none;
     transition: background.4s;
 }
 #menu-h ul li a:hover{
-    background-color: blueviolet;
+    background-color: darkcyan;
 }
 #menu-h ul li:last-child a{
-    float: right;
-    background-color: aqua;
+float: right;
+background-color: blueviolet;
 }
